# mnemnk-obsidian

./: .env.sample  Cargo.toml  Obsidian.json  README.md  mnemnk.json
src/append_note/: main.rs
src/create_note/: main.rs
src/delete_note/: main.rs
src/get_note/: main.rs
src/list_notes/: main.rs
